# learn-udemy-agents

./: .gitignore  _notes.md  requirements.txt  temp.ipynb  z_my_notes.md
1_foundations/: 1_lab1.ipynb  1_lab1_mm.ipynb  2_lab2.ipynb  2_lab2_mm.ipynb  3_lab3.ipynb  3_lab3_mm.ipynb  4_lab4.ipynb  4_lab4_mm.ipynb  5_extra.ipynb  5_extra_mm.ipynb  5_extra_mm2.ipynb  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  1_lab1_mm.ipynb  2_lab2_mm.ipynb  3_lab3_mm.ipynb  4_lab4_mm.ipynb
3_crew/coder_mm/: README.md  pyproject.toml
3_crew/coder_mm/output/: code_and_output.txt
3_crew/coder_mm/src/coder_mm/: main.py
3_crew/debate_mm/: README.md  pyproject.toml
3_crew/debate_mm/output/: decide.md  oppose.md  propose.md
3_crew/debate_mm/src/debate_mm/: main.py
3_crew/debate_mm/src/debate_mm/config/: agents.yaml
3_crew/engineering_team_mm/: README.md  accounts.py  pyproject.toml
3_crew/engineering_team_mm/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/engineering_team_mm/src/engineering_team_mm/: main.py
3_crew/engineering_team_mm/src/engineering_team_mm/config/: agents.yaml
3_crew/financial_researcher_mm/: README.md  pyproject.toml
3_crew/financial_researcher_mm/output/: report.md
3_crew/financial_researcher_mm/src/financial_researcher_mm/: main.py
3_crew/financial_researcher_mm/src/financial_researcher_mm/config/: tasks.yaml
3_crew/stock_picker_mm/: README.md  pyproject.toml
3_crew/stock_picker_mm/memory/: chroma.sqlite3  long_term_memory_storage.db
3_crew/stock_picker_mm/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker_mm/src/stock_picker_mm/: main.py
4_langgraph/: 1_lab1_mm.ipynb  2_lab2_mm.ipynb  3_lab3_mm.ipynb  4_lab4_mm.ipynb  memory.db-shm  memory.db-wal  sidekick_tools.py
5_autogen/: 1_lab1_autogen_agentchat_mm.ipynb  2_lab2_autogen_agentchat_mm.ipynb  3_lab3_autogen_core_mm.ipynb  4_lab4_autogen_distributed_mm.ipynb  agent1.py  agent10.py  agent11.py  agent12.py  agent13.py  agent14.py  agent15.py  agent16.py  agent17.py  agent18.py  agent19.py  agent2.py  agent20.py  agent3.py  agent4.py  agent5.py  agent6.py  agent7.py  agent8.py  agent9.py  idea1.md  idea10.md  idea11.md  idea12.md  idea13.md  idea14.md  idea15.md  idea16.md  idea17.md  idea18.md  idea19.md  idea2.md  idea20.md  idea3.md  idea4.md  idea5.md  (+6 more)
5_autogen/sandbox/: flights.md
6_mcp/: 1_lab1_mm.ipynb  2_lab2_mm.ipynb  3_lab3_mm.ipynb  4_lab4_mm.ipynb  5_lab5_mm.ipynb
6_mcp/sandbox/: banoffee.md
