[project]
name = "debate_mm"
version = "0.1.0"
description = "debate_mm using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
debate_mm = "debate_mm.main:run"
run_crew = "debate_mm.main:run"
train = "debate_mm.main:train"
replay = "debate_mm.main:replay"
test = "debate_mm.main:test"
run_with_trigger = "debate_mm.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
