[project]
name = "financial_researcher_mm"
version = "0.1.0"
description = "financial_researcher_mm using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
financial_researcher_mm = "financial_researcher_mm.main:run"
run_crew = "financial_researcher_mm.main:run"
train = "financial_researcher_mm.main:train"
replay = "financial_researcher_mm.main:replay"
test = "financial_researcher_mm.main:test"
run_with_trigger = "financial_researcher_mm.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
